k8s/base/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pipeline-api
  namespace: default
  labels:
    app: pipeline-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pipeline-api
  template:
    metadata:
      labels:
        app: pipeline-api
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: pipeline-api
          image: ghcr.io/klimatbyran/pipeline-api
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "500m"
          ports:
            - containerPort: 4000
imagePullPolicy: Always
