k8s/base/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pipeline-api-worker
  namespace: default
  labels:
    app: pipeline-api-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pipeline-api-worker
  template:
    metadata:
      labels:
        app: pipeline-api-worker
    spec:
      containers:
        - name: pipeline-api-worker
          image: ghcr.io/klimatbyran/pipeline-api
          command: ['npm', 'run', 'worker']
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "500m"
          imagePullPolicy: Always
