k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pipeline-api
spec:
  selector:
    app: pipeline-api
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
