k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pipeline-api
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/proxy-body-size: "450m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - stage-pipeline-api.klimatkollen.se
      secretName: stage-pipeline-api-tls
  rules:
    - host: stage-pipeline-api.klimatkollen.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pipeline-api
                port:
                  number: 4000
